@@ -1,5 +1,8 @@
 Changes with Apache 1.3.23
 
+  *) Fix incorrect "Content-Length" header in the 416 "range not
+     satisfiable" response. [Joe Orton <joe@manyfish.co.uk>]
+
   *) Add FileETag directive to control fields used when constructing
      an ETag for a file-based resource.  Historically the inode,
      size, and mtimehave been used, but the inode factor broke
